# Straustrup

./: Chapter_10::1-2-3  Chapter_10::1-2-3-4  Chapter_10::5_<<&&>>  Chapter_10::5_<<&&>>_in_process  Chapter_10::Calc_istream  Chapter_10::Concat_Files  Chapter_10::Exercise  Chapter_10::Roman_int  Chapter_10::Roman_int_Calc  Chapter_10::sum_FILE  Chapter_4::21_tasks  Chapter_7::Calculator  Chapter_8_Calculate_v4_ref  Chapter_8_Randomize  Chapter_9::Date  Chapter_9::Library  Chapter_9::Money  Chapter_9::Name_Pairs  Chapter_9::Rational  Game_Bull_&&_Cows  Glava_9_Library
Chapter_10/: Exercise  Name_File_GL  Roman_int_Calc  tasks_1-2-3-4
Chapter_11/: Change_Order_&&_Stroke_11-12  Dictionary_7  Getline(3p)_14-15  Split_9-10  TXT_To_Binary_Inverse  tasks_1-6
Chapter_12-13_FLTK/: .gitignore  12_Study.cpp  CMakeLists.txt  README.md
Chapter_12-13_FLTK/PPP/: GUI.cpp  Graph.cpp  Graph.h  Point.h  Simple_window.cpp  Simple_window.h
Chapter_17/: Exercise_1-5  Exercise_11-13  Exercise_11-14  Exercise_11-17  Exercise_14  Exercise_6-10  Link  Tasks_First_Part  Tasks_Second_Part
Chapter_17/Tasks_First&&Second_Parts/: Exercise`s  Tasks
Chapter_18/: Exercise_1-4  Exercise_12  Exercise_5-7  Exercise_8
Chapter_19/: Exercise_1-2  Exercise_11  Exercise_12  Exercise_13  Exercise_3  Exercise_4  Exercise_5-6-7  Exercise_8  Exercise_8-9  Rule_of_Five  my_auto_ptr  my_counted_ptr  tutorial  zads
Chapter_6/: Chapter_6_PorS  Sentences
Chapter_8/: Calculator_v2  Calculator_v3
Chapter_9/: Library
